# mpid

./: .gitignore  dub.json  meson.build
source/mpid/: comm.d  datatype.d  dversion.d  group.d  include.d  mpi.d  nogcassert.d  package.d
source/mpid/mpich/: include.d  include.dpp
source/mpid/openmpi/: include.d  include.dpp
